# PlayCV

./: CMakeLists.txt  README.md  version.h
CVUtils/: CMakeLists.txt  cv_handler.cpp  cv_handler.h  cv_library.cpp  cv_library.h  cv_manager.cpp  cv_manager.h  test.cpp
Testcases/: CMakeLists.txt  color_segment_test.cpp  minor_contrast_test.cpp  optical_flow_test.cpp
